tests/method_immutable_self_error.june
// error: 'self' variable is not mutable

struct Box {
    width: i64

    fun grow_width(self) {
        .width = 99
    }
}

fun main() {
    let box = new Box(width: 22)
    box.grow_width()

    println(box.width)
}